Ok so catassign experiment seems to be working... mostly. Category goodness still needs to be implemented. Also can confirm that this works on AMT, which is fantastic.

--- a/Experiments/cat-assign/webapp/css/custom.css
+++ b/Experiments/cat-assign/webapp/css/custom.css
@@ -49,6 +49,12 @@ body {
   background-color:  white;
 }
 
+/* style for feedback */
+.feedback_area {
+	text-align: center;
+	padding: 20px;
+}
+
 .classifybutton:hover {
     background-color: #555555; /* Green */
     color: white;
