--- a/Experiments/cat-assign/webapp/html/templates/assignment.html
+++ b/Experiments/cat-assign/webapp/html/templates/assignment.html
@@ -7,3 +7,6 @@
 	<button type='button' class='classifybutton' id = 'classify_alpha'>Alpha</button>
 	<button type='button' class='classifybutton' id = 'classify_beta'>Beta</button>
 </div>
+<div class='feedback_area'>
+  <div id='feedback'></div>
+</div>
