Packer rep fixed for the umpteenth time. Fixed old bug where one-member categories were not correctly recognised as such. Note that currently packer rep uniformly randomly generates the first candidate. Will prob need to discuss this to gauge its sanity.

--- a/Experiments/middle-bottomABC/webapp/html/templates/generate.html
+++ b/Experiments/middle-bottomABC/webapp/html/templates/generate.html
@@ -32,7 +32,7 @@
 	<div id='generate_bottom'>
 
 		<div id='generatetxt'>
-			You can use the controls above to create a member of the Beta Category. Click the 'Continue' button 
+			You can use the controls above to create a member of the <span id='categoryID'></span> Category. Click the 'Continue' button 
 			when you are finished.
 		</div>
 
