--- a/Experiments/middle-bottomABC/webapp/html/templates/generalize.html
+++ b/Experiments/middle-bottomABC/webapp/html/templates/generalize.html
@@ -6,4 +6,5 @@
 	<br>
 	<button type='button' class='classifybutton' id = 'classify_alpha'>Alpha</button>
 	<button type='button' class='classifybutton' id = 'classify_beta'>Beta</button>
+	<button type='button' class='classifybutton' id = 'classify_gamma'>Gamma</button>
 </div>
